<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/score_fundo"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/bt_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/bt_voltar"
        android:contentDescription="@string/bt_voltar" />

    <ImageView
        android:id="@+id/img_espaco_central_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/img_espaco_central_vertical"
        android:contentDescription="@string/img_espaco_central_vertical" />

    <TextView
       
        android:id="@+id/campo_acertos"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/nenhum"
        android:layout_toLeftOf="@+id/img_espaco_central_vertical"
        android:contentDescription="@string/campo_acertos" />

       

    <TextView
        android:id="@+id/campo_erros"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:text="@string/nenhum"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/img_espaco_central_vertical"
        android:contentDescription="@string/campo_erros"/>

</RelativeLayout>